# celeste-converter

./: .gitignore  Cargo.toml  README.md
src/: convert.rs  file.rs  lib.rs  log.rs  main.rs  math.rs  png.rs  png_chunk.rs  rayon.rs  unpack.rs
tests/: convert_test.rs  file_test.rs  math_test.rs  png_test.rs  unpack_test.rs
tests/data/ffmpeg/: gray.data  gray16be.data  monob-prime-dimensions.data  monob.data  pal8.data  rgb24.data  rgb48be.data  rgba.data  rgba64be.data  ya16be.data  ya8.data
