[package]
name = "celeste-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
pathdiff = "0.2.3"
png = "0.17.16"
same-file = "1.0.6"
rayon = "1.10.0"

[dev-dependencies]
rstest = "0.25.0"
rstest_reuse = "0.7.0"
image = { version = "0.25.6", features = ["png"] }
rand = "0.8.5"
